# gen-ai-projects

1files/: README.md
1files/src/: App.tsx
MultiAgentMarketIntelligence/: Production-ready Multi‑agent Market Intelligence System — Spec V1.docx  production_ready_multi_agent_market_intelligence_system_spec_v_1.md  provide specification provides a comprehensive blueprint for building a production.docx
PortfolioView/: 1_flutter_scaffold.sh  2_rust_backend.sh
PortfolioView/portfolio_view/: README.md  pubspec.yaml
StockScout/: Cargo.toml  FLUTTER_APP_TESTS.md  TEST_RESULTS.md  flutter_bootstrap.js  index.html  main.dart.js  manifest.json  replit.md  test_flutter_resilience.dart  test_resilience.py  test_runner.sh  version.json
StockScout/assets/: NOTICES
StockScout/attached_assets/: Pasted-AI-Product-Specification-Multi-Agent-Research-Platform-for-High-Growth-Stock-Selection-NASDAQ-OT-1754248476338_1754248476339.txt
StockScout/backend/sql/: public.agent_communications.sql
StockScout/migrations/: 001_initial.sql
StockScout/src/: config.rs  database.rs  lib.rs  main.rs  models.rs
StockScout/src/agents/: analysis_agent.rs  coordinator_agent.rs  data_agent.rs  mod.rs
StockScout/src/routes/: agents.rs  mod.rs  stocks.rs
StockScout/src/services/: mod.rs  screening_service.rs  stock_service.rs
StockScout/src/utils/: cache.rs  circuit_breaker.rs  mod.rs  retry.rs
StockScout/tests/: simple_unit_test.rs
StockScout/web/: README.md  index.html  main.dart  pubspec.yaml
StockScout/web/coverage/: lcov.info
StockScout/web/integration_test/: app_test.dart
StockScout/web/lib/: main.dart
StockScout/web/lib/models/: agent_result.dart  stock.dart
StockScout/web/lib/screens/: dashboard_screen.dart
StockScout/web/lib/services/: api_service.dart
StockScout/web/lib/utils/: retry_utils.dart
StockScout/web/lib/widgets/: agent_status_card.dart  agent_status_widget.dart  retry_status_widget.dart  stock_card.dart  stock_chart_widget.dart  stock_list_widget.dart
StockScout/web/test/: simple_test.dart
StockScout/web/test/app_tests/: main_app_test.dart
StockScout/web/test/integration_tests/: app_flow_test.dart
StockScout/web/test/performance_tests/: widget_performance_test.dart
StockScout/web/test/service_tests/: api_service_integration_test.dart
StockScout/web/test/unit_tests/: service_test.dart
StockScout/web/test/widget_tests/: agent_status_widget_test.dart  dashboard_widget_test.dart  stock_card_test.dart
StockScout/web/web/: index.html
TradeDeskPro/: electron.js  package-lock.json  package.json
TradeDeskPro/backend/: alembic.ini  database.py  main.py  models.py  schemas.py  sql_app.db  test_main.py  test_sql_app.db
TradeDeskPro/frontend/: package-lock.json  package.json  vite.config.ts
auraluxe_min/: README.md  podman-compose.yml
auraluxe_min/backend/: .env.example  Cargo.toml
auraluxe_min/backend/crates/assistant/: Cargo.toml
auraluxe_min/backend/crates/assistant/src/: main.rs
auraluxe_min/backend/crates/catalog/: Cargo.toml
auraluxe_min/backend/crates/catalog/src/: main.rs
auraluxe_min/backend/crates/common/: Cargo.toml
auraluxe_min/backend/crates/common/src/: lib.rs
auraluxe_min/backend/crates/gateway/: Cargo.toml
auraluxe_min/backend/crates/gateway/src/: main.rs
auraluxe_min/backend/crates/lyrics/: Cargo.toml
auraluxe_min/backend/crates/lyrics/src/: main.rs
auraluxe_min/backend/crates/payments/: Cargo.toml
auraluxe_min/backend/crates/payments/src/: main.rs
auraluxe_min/backend/crates/playback/: Cargo.toml
auraluxe_min/backend/crates/playback/src/: main.rs
auraluxe_min/backend/crates/recs/: Cargo.toml
auraluxe_min/backend/crates/recs/src/: main.rs
auraluxe_min/backend/migrations/: 20250823_000001_init.sql  20250823_000002_more.sql
building-with-llms-main/: .env.example  .gitignore  LICENSE  README.md  requirements.txt  start.sh
building-with-llms-main/adr/: README.md
building-with-llms-main/backend/: main.py
building-with-llms-main/docs/: README.md
building-with-llms-main/examples/: README.md
building-with-llms-main/frontend/: README.md  index.html  package-lock.json  package.json
building-with-llms-main/guides/: README.md
creative-scraper/: package-lock.json  package.json  replit.md
creative-scraper/server/: routes.ts  storage.ts
creative-scraper/shared/: schema.ts
desktop-trader001/: api_client.py  app.py  charting.py  config.ini  main.py  requirements.txt
desktop-trader001/static/: app.js  styles.css
desktop-trader001/templates/: index.html
gemdesk/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
gemdesk/electron/: main.ts  preload.ts
mcp/: Redis-mcp-server (rust) — Full Project.docx  redis_mcp_server_rust_full_project.md
multi-agent-market-intel/: Makefile  README.md  skaffold.yaml
multi-agent-market-intel/backend/: .env  Cargo.toml  otel-config.yaml  podman-compose.yml  prometheus.yaml
multi-agent-market-intel/backend/api/: Cargo.toml  Containerfile
multi-agent-market-intel/backend/api/migrations/: 0001_init.sql  0002_backtests.sql  0003_timescale.sql  0004_ohlcv_corp_actions.sql
multi-agent-market-intel/backend/api/src/: audit.rs  auth.rs  bus.rs  error.rs  features_cache.rs  main.rs  openapi.rs  routes.rs  state.rs
multi-agent-market-intel/backend/api/src/handlers/: backtests.rs  compliance.rs  features.rs  health.rs  portfolio.rs  signals.rs
multi-agent-market-intel/backend/backtest_svc/: Cargo.toml  Containerfile
multi-agent-market-intel/backend/backtest_svc/src/: main.rs  model.rs  routes.rs  sim.rs  state.rs
multi-agent-market-intel/backend/common/: Cargo.toml
multi-agent-market-intel/backend/common/src/: lib.rs
multi-agent-market-intel/backend/ingest_cli/: Cargo.toml
multi-agent-market-intel/backend/ingest_cli/src/: main.rs
multi-agent-market-intel/backend/portfolio_svc/: Cargo.toml  Containerfile
multi-agent-market-intel/backend/portfolio_svc/src/: main.rs  optimizer.rs  risk.rs  routes.rs  state.rs
redis-mcp-server/: Cargo.toml  Containerfile
redis-mcp-server/src/: main.rs  service.rs
(+160 files in other folders)
