[package]
name = "stock-research-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
futures = "0.3"
dotenv = "0.15"
async-trait = "0.1"

[dev-dependencies]
actix-rt = "2.9"
actix-web-actors = "4.2"
tokio-test = "0.4"
mockall = "0.12"
serial_test = "3.0"
