
[package]
name = "redis-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal", "io-std"] }
clap = { version = "4.5", features = ["derive", "env"] }
rmcp = { version = "0.6", features = ["server", "transport-io", "macros"] }
redis = { version = "0.32", features = [
  "tokio-comp", "aio", "connection-manager", "json",
  "cluster-async", "sentinel",
  "tls-rustls"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
