[workspace]
resolver = '2'
members = ['crates/common', 'crates/gateway', 'crates/catalog', 'crates/payments', 'crates/playback', 'crates/recs', 'crates/assistant', 'crates/lyrics']
[workspace.dependencies]
axum = { version = '0.7', features = ['macros'] }
tokio = { version = '1.39', features = ['full'] }
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
sqlx = { version = '0.7', features = ['runtime-tokio-rustls', 'postgres', 'uuid', 'chrono', 'macros'] }
uuid = { version = '1', features = ['v4', 'serde'] }
chrono = { version = '0.4', features = ['serde'] }
tracing = '0.1'
tracing-subscriber = { version = '0.3', features = ['env-filter'] }
dotenvy = '0.15'
tower = '0.5'
tower-http = { version = '0.5', features = ['cors', 'trace'] }
anyhow = '1.0'
reqwest = { version = '0.12', features = ['json', 'rustls-tls'] }
