[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["macros", "preserve_order"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
thiserror = "2.0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
dotenvy = "0.15"
anyhow = "1"
jsonwebtoken = "9"
headers = "0.4"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
once_cell = "1"
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.25", features = ["tokio-comp"] }
aws-config = "1"
aws-sdk-s3 = "1"
opentelemetry = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = "0.15"
tracing-opentelemetry = "0.23"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
common = { path = "../common" }
