[package]
name = 'common'
version = '0.1.0'
edition = '2021'
[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
